--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~13.2.0",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "mongoose-unique-validator": "^3.1.0",
